--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zing MP3 | Nghe nhạc trực tuyến</title>
+    <link rel="icon" href="./images/image-slide/zingMp3-icon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
@@ -16,6 +17,7 @@
     <link rel="stylesheet" href="./css/musicbar.css">
     <link rel="stylesheet" href="./css/popup.css">
     <link rel="stylesheet" href="./css/user/overview.css">
+    <link rel="stylesheet" href="./css/user/slides.css">
     <link rel="stylesheet" href="./css/user/songs.css">
     <link rel="stylesheet" href="./css/user/upload.css">
     <link rel="stylesheet" href="./css/user/playlist.css">
@@ -325,7 +327,24 @@
                                     <!-- songs content -->
                                     <div class="user_overview_content col l-12 m-12 c-12">
                                         <div class="user_overview_content_slides hide-on-mobile l-4 m-4">
-                                            LEFT
+                                            <div class="user_overview_slides_wrapper_image slide-first">
+                                                <img src="./images/image-slide/amee.jpg" alt="" class="user_overview_slides_image">
+                                            </div>
+                                            <div class="user_overview_slides_wrapper_image slide-second">
+                                                <img src="./images/image-slide/back-jack.jpg" alt="" class="user_overview_slides_image">
+                                            </div>
+                                            <div class="user_overview_slides_wrapper_image">
+                                                <img src="./images/image-slide/cu-chill-thoi.jpg" alt="" class="user_overview_slides_image">
+                                            </div>
+                                            <div class="user_overview_slides_wrapper_image">
+                                                <img src="./images/image-slide/kem-duyen.jpg" alt="" class="user_overview_slides_image">
+                                            </div>
+                                            <div class="user_overview_slides_wrapper_image">
+                                                <img src="./images/image-slide/gac-lai-au-lo.jpg" alt="" class="user_overview_slides_image">
+                                            </div>
+                                            <div class="user_overview_slides_wrapper_image">
+                                                <img src="./images/image-slide/yeu-don-phuong.jpg" alt="" class="user_overview_slides_image">
+                                            </div>
                                         </div>
                                         <ul class="user_overview_content_songs l-8 m-8 c-12"></ul>
                                     </div>
@@ -473,12 +492,26 @@
                 </div>
                 <div class="music_bar ">
                     <div class="musicbar_info">
-                        <div class="musicbar_info_disk_wrapper">
-                            <img src="../images/song-image/image1.jpg" alt="" class="musicbar_info_disk">
+                        <div class="musicbar_info_disk_note_wrapper">
+                            <div class="musicbar_info_disk_wrapper">
+                                <img src="../images/song-image/image1.jpg" alt="" class="musicbar_info_disk">
+                            </div>
+                            <svg fill="#fff" viewBox="0 0 512 512" class="thumb_note_icon thumb_note_1">
+                                <path d="M470.38 1.51L150.41 96A32 32 0 0 0 128 126.51v261.41A139 139 0 0 0 96 384c-53 0-96 28.66-96 64s43 64 96 64 96-28.66 96-64V214.32l256-75v184.61a138.4 138.4 0 0 0-32-3.93c-53 0-96 28.66-96 64s43 64 96 64 96-28.65 96-64V32a32 32 0 0 0-41.62-30.49z"></path>
+                            </svg>
+                            <svg fill="#fff" viewBox="0 0 384 512" class="thumb_note_icon thumb_note_2">
+                                <path d="M310.94 1.33l-96.53 28.51A32 32 0 0 0 192 60.34V360a148.76 148.76 0 0 0-48-8c-61.86 0-112 35.82-112 80s50.14 80 112 80 112-35.82 112-80V148.15l73-21.39a32 32 0 0 0 23-30.71V32a32 32 0 0 0-41.06-30.67z"></path>
+                            </svg>
+                            <svg fill="#fff" viewBox="0 0 384 512" class="thumb_note_icon thumb_note_3">
+                                <path d="M310.94 1.33l-96.53 28.51A32 32 0 0 0 192 60.34V360a148.76 148.76 0 0 0-48-8c-61.86 0-112 35.82-112 80s50.14 80 112 80 112-35.82 112-80V148.15l73-21.39a32 32 0 0 0 23-30.71V32a32 32 0 0 0-41.06-30.67z"></path>
+                            </svg>
+                            <svg fill="#fff" viewBox="0 0 512 512" class="thumb_note_icon thumb_note_4">
+                                <path d="M470.38 1.51L150.41 96A32 32 0 0 0 128 126.51v261.41A139 139 0 0 0 96 384c-53 0-96 28.66-96 64s43 64 96 64 96-28.66 96-64V214.32l256-75v184.61a138.4 138.4 0 0 0-32-3.93c-53 0-96 28.66-96 64s43 64 96 64 96-28.65 96-64V32a32 32 0 0 0-41.62-30.49z"></path>
+                            </svg>
                         </div>
                         <div class="musicbar_info_wrapper">
-                            <p class="musicbar_info_name limit-text">Âm thầm bên em</p>
-                            <div class="musicbar_info_singers limit-text">Sơn Tùng MTP</div>
+                            <p class="musicbar_info_name limit-text"></p>
+                            <div class="musicbar_info_singers limit-text"></div>
                         </div>
                         <div class="musicbar_info_icon_wrapper hide-on-tablet hide-on-mobile">
                             <p class="musicbar_info_icon">
@@ -533,14 +566,14 @@
                         </button>
                     </div>
                     <div class="musicbar_mobile_custom display-on-mobile hide-on-computer hide-on-tablet">
-                        <button class="musicbar_custom_play_icon">
+                        <button class="musicbar_custom_play_icon musicbar_mobile_custom_skip">
                             <i class="bi bi-skip-start-fill"></i>
                         </button>
                         <button class="musicbar_custom_play_icon musicbar_mobile_custom_play_pause">
                             <i class="bi bi-pause hide-btn"></i>
                             <i class="bi bi-play-fill"></i>
                         </button>
-                        <button class="musicbar_custom_play_icon">
+                        <button class="musicbar_custom_play_icon musicbar_mobile_custom_skip">
                             <i class="bi bi-skip-end-fill"></i>
                         </button>
                     </div>
@@ -589,12 +622,26 @@
                         </div>
                         <div class="music_bar popup_musicbar">
                             <div class="musicbar_info hide-on-mobile">
-                                <div class="musicbar_info_disk_wrapper">
-                                    <img src="../images/song-image/image1.jpg" alt="" class="musicbar_info_disk">
+                                <div class="musicbar_info_disk_note_wrapper">
+                                    <div class="musicbar_info_disk_wrapper">
+                                        <img src="../images/song-image/image1.jpg" alt="" class="musicbar_info_disk">
+                                    </div>
+                                    <svg fill="#fff" viewBox="0 0 512 512" class="thumb_note_icon thumb_note_1">
+                                        <path d="M470.38 1.51L150.41 96A32 32 0 0 0 128 126.51v261.41A139 139 0 0 0 96 384c-53 0-96 28.66-96 64s43 64 96 64 96-28.66 96-64V214.32l256-75v184.61a138.4 138.4 0 0 0-32-3.93c-53 0-96 28.66-96 64s43 64 96 64 96-28.65 96-64V32a32 32 0 0 0-41.62-30.49z"></path>
+                                    </svg>
+                                    <svg fill="#fff" viewBox="0 0 384 512" class="thumb_note_icon thumb_note_2">
+                                        <path d="M310.94 1.33l-96.53 28.51A32 32 0 0 0 192 60.34V360a148.76 148.76 0 0 0-48-8c-61.86 0-112 35.82-112 80s50.14 80 112 80 112-35.82 112-80V148.15l73-21.39a32 32 0 0 0 23-30.71V32a32 32 0 0 0-41.06-30.67z"></path>
+                                    </svg>
+                                    <svg fill="#fff" viewBox="0 0 384 512" class="thumb_note_icon thumb_note_3">
+                                        <path d="M310.94 1.33l-96.53 28.51A32 32 0 0 0 192 60.34V360a148.76 148.76 0 0 0-48-8c-61.86 0-112 35.82-112 80s50.14 80 112 80 112-35.82 112-80V148.15l73-21.39a32 32 0 0 0 23-30.71V32a32 32 0 0 0-41.06-30.67z"></path>
+                                    </svg>
+                                    <svg fill="#fff" viewBox="0 0 512 512" class="thumb_note_icon thumb_note_4">
+                                        <path d="M470.38 1.51L150.41 96A32 32 0 0 0 128 126.51v261.41A139 139 0 0 0 96 384c-53 0-96 28.66-96 64s43 64 96 64 96-28.66 96-64V214.32l256-75v184.61a138.4 138.4 0 0 0-32-3.93c-53 0-96 28.66-96 64s43 64 96 64 96-28.65 96-64V32a32 32 0 0 0-41.62-30.49z"></path>
+                                    </svg>
                                 </div>
                                 <div class="musicbar_info_wrapper">
-                                    <p class="musicbar_info_name limit-text">Âm thầm bên em</p>
-                                    <div class="musicbar_info_singers limit-text">Sơn Tùng MTP</div>
+                                    <p class="musicbar_info_name limit-text"></p>
+                                    <div class="musicbar_info_singers limit-text"></div>
                                 </div>
                                 <div class="musicbar_info_icon_wrapper hide-on-tablet hide-on-mobile">
                                     <p class="musicbar_info_icon">
