finish for pure coding

--- a/index.html
+++ b/index.html
@@ -326,27 +326,33 @@
                                     </div>
                                     <!-- songs content -->
                                     <div class="user_overview_content col l-12 m-12 c-12">
-                                        <div class="user_overview_content_slides hide-on-mobile l-4 m-4">
+                                        <div class="user_overview_content_slides hide-on-mobile">
                                             <div class="user_overview_slides_wrapper_image slide-first">
-                                                <img src="./images/image-slide/amee.jpg" alt="" class="user_overview_slides_image">
+                                                <img src="./images/song-image/image1.jpg" alt="" class="user_overview_slides_image">
                                             </div>
                                             <div class="user_overview_slides_wrapper_image slide-second">
-                                                <img src="./images/image-slide/back-jack.jpg" alt="" class="user_overview_slides_image">
+                                                <img src="./images/song-image/image2.jpg" alt="" class="user_overview_slides_image">
+                                            </div>
+                                            <div class="user_overview_slides_wrapper_image slide-third">
+                                                <img src="./images/song-image/image3.jpg" alt="" class="user_overview_slides_image">
                                             </div>
                                             <div class="user_overview_slides_wrapper_image">
-                                                <img src="./images/image-slide/cu-chill-thoi.jpg" alt="" class="user_overview_slides_image">
+                                                <img src="./images/song-image/image4.jpg" alt="" class="user_overview_slides_image">
                                             </div>
                                             <div class="user_overview_slides_wrapper_image">
-                                                <img src="./images/image-slide/kem-duyen.jpg" alt="" class="user_overview_slides_image">
+                                                <img src="./images/song-image/image5.jpg" alt="" class="user_overview_slides_image">
                                             </div>
                                             <div class="user_overview_slides_wrapper_image">
-                                                <img src="./images/image-slide/gac-lai-au-lo.jpg" alt="" class="user_overview_slides_image">
+                                                <img src="./images/song-image/image6.jpg" alt="" class="user_overview_slides_image">
                                             </div>
                                             <div class="user_overview_slides_wrapper_image">
-                                                <img src="./images/image-slide/yeu-don-phuong.jpg" alt="" class="user_overview_slides_image">
+                                                <img src="./images/song-image/image7.jpg" alt="" class="user_overview_slides_image">
+                                            </div>
+                                            <div class="user_overview_slides_wrapper_image">
+                                                <img src="./images/song-image/image8.jpg" alt="" class="user_overview_slides_image">
                                             </div>
                                         </div>
-                                        <ul class="user_overview_content_songs l-8 m-8 c-12"></ul>
+                                        <ul class="user_overview_content_songs c-12"></ul>
                                     </div>
                                 </div>    
                                 <!-- Playlist -->
